Fixed bg.png so it wasn't stretched on the retina devices.

--- a/Wiki App/style.css
+++ b/Wiki App/style.css
@@ -30,6 +30,8 @@ body {
 	text-shadow: 1px 1px 2px #ffffff;
 	position: relative;
 	overflow: hidden !important;
+	background: transparent !important;
+	
 }
 
 #mw-panel, #mp-sister, #mp-lang, #footer-icons, #p-personal, #left-navigation, #p-views, #p-cactions, #mw-page-base, #articlecount, .editsection, .magnify, #mw-fr-revisiontag, .portlet, .tmbox-notice, .mbox-image, #featured-star, #good-star, #protected-icon, #siteSub, #jump-to-nav, h1#firstHeading, #catlinks, #footer, #mw-articlefeedback, #mw-head, .printfooter {
@@ -97,6 +99,10 @@ table.infobox.biography.vcard tbody tr:first-child {
 	list-style: none !important;
 }
 
+blockquote, dl {
+	font-style: italic !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	text-align: left !important;
 	overflow: visible !important;
@@ -104,6 +110,16 @@ h1, h2, h3, h4, h5, h6 {
 
 h2 span, h3 span {
 	display: none;
+}
+
+h4 {
+	margin-left: none !important;
+	padding-left: none !important;
+	text-indent: none !important;
+}
+
+h4 span:first-child {
+	display: none !important;
 }
 
 h2 span.mw-headline {
@@ -214,10 +230,26 @@ ol.references li, .refbegin ul li {
 	list-style: none !important;
 	word-wrap: break-word !important;
 	overflow-x: hidden !important;
+	padding-left: 0 !important;
+	padding-right: 0 !important;
 }
 
 ol.references li .mw-cite-backlink {
 	display: none !important;
+}
+
+ol.references li ul {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+ol.references li ul li:first-child {
+	padding-top: 0 !important;
+}
+
+ol.references li ul li:last-child {
+	padding-bottom: 0 !important;
+	border-bottom: none !important;
 }
 
 .references-small {
@@ -243,7 +275,7 @@ sup {
 
 a.opentable {
 	-webkit-tap-highlight-color: rgba(0,0,0,0) !important;
-	-webkit-touch-callout: none !important;
+	-webkit-touch-callout: none !important;
 }
 
 .opentable, .tablepopup {
